PRO-3040: Align the sign out link appropriately 	  - ensure link is aligned properly on both desk top browsers and mobile browsers

--- a/app/assets/sass/application-common.scss
+++ b/app/assets/sass/application-common.scss
@@ -82,12 +82,14 @@ div.declaration-header {
 
 #global-header .header-proposition #sign-out-header {
   @include bold-16;
+  margin-top: 4px;
   float: right;
   color: $white;
   text-decoration: none; }
   @media (min-width: 641px) {
     #global-header .header-proposition #sign-out-header {
-      @include bold-24; } }
+      @include bold-19;
+      margin-top: 2px; } }
 
 #global-header .header-proposition a#sign-out-header:hover {
   text-decoration: underline;
